--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,11 +2,9 @@
  * Use of this source code is governed by a BSD-style license that can be
  * found in the LICENSE file. */
 
-html, body {
-  padding: 0;
-  margin: 0;
-  width: 100%;
-  height: 100%;
+
+.wp-block-blockasaurus-blockasaurus {
+  position: relative;
 }
 
 .icon {
@@ -68,6 +66,21 @@ html, body {
 
 #offline-resources {
   display: none;
+}
+
+
+#messageBox {
+    background-color: rgba(0, 0, 0, .5);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+#messageBox h1 {
+  color: white;
+  margin-top: 50px;
 }
 
 @media (max-width: 420px) {
