--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,7 +14,7 @@
 }
 
 .icon-offline {
-  content: -webkit-image-set( url(assets/default_100_percent/100-error-offline.png) 1x, url(assets/default_200_percent/200-error-offline.png) 2x);
+  content: -webkit-image-set( url(../img/default_100_percent/100-error-offline.png) 1x, url(../img/default_200_percent/200-error-offline.png) 2x);
   position: relative;
 }
 
