--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,13 +7,13 @@
   position: relative;
 }
 
-.icon {
+.bks-icon {
   -webkit-user-select: none;
   user-select: none;
   display: inline-block;
 }
 
-.icon-offline {
+.bks-icon-offline {
   content: -webkit-image-set( url(../img/default_100_percent/100-error-offline.png) 1x, url(../img/default_200_percent/200-error-offline.png) 2x);
   position: relative;
 }
@@ -25,7 +25,7 @@
 
 /* Offline page */
 
-.offline .interstitial-wrapper {
+.bks-offline .bks-interstitial-wrapper {
   color: #2b2b2b;
   font-size: 1em;
   line-height: 1.55;
@@ -35,7 +35,7 @@
   width: 100%;
 }
 
-.offline .runner-container {
+.offline .bks-runner-container {
   height: 150px;
   max-width: 600px;
   overflow: hidden;
@@ -44,7 +44,7 @@
   width: 44px;
 }
 
-.offline .runner-canvas {
+.offline .bks-runner-canvas {
   height: 150px;
   max-width: 600px;
   opacity: 1;
@@ -54,7 +54,7 @@
   z-index: 2;
 }
 
-.offline .controller {
+.offline .bks-controller {
   background: rgba(247, 247, 247, .1);
   height: 100vh;
   left: 0;
@@ -64,12 +64,12 @@
   z-index: 1;
 }
 
-#offline-resources {
+#bks-offline-resources {
   display: none;
 }
 
 
-#messageBox {
+#bks-messageBox {
     background-color: rgba(0, 0, 0, .5);
     position: absolute;
     top: 0;
@@ -78,7 +78,7 @@
     right: 0;
 }
 
-#messageBox h1 {
+#bks-messageBox h1 {
   color: white;
   margin-top: 50px;
 }
@@ -99,10 +99,10 @@
   h1 {
     margin: 0 0 15px;
   }
-  .icon-offline {
+  .bks-icon-offline {
     margin: 0 0 10px;
   }
-  .interstitial-wrapper {
+  .bks-interstitial-wrapper {
     margin-top: 5%;
   }
   .nav-wrapper {
@@ -111,38 +111,38 @@
 }
 
 @media (min-width: 600px) and (max-width: 736px) and (orientation: landscape) {
-  .offline .interstitial-wrapper {
+  .offline .bks-interstitial-wrapper {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
 @media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation:landscape) {
-  .interstitial-wrapper {
+  .bks-interstitial-wrapper {
     margin-bottom: 100px;
   }
 }
 
 @media (min-height: 240px) and (orientation: landscape) {
-  .offline .interstitial-wrapper {
+  .offline .bks-interstitial-wrapper {
     margin-bottom: 90px;
   }
-  .icon-offline {
+  .bks-icon-offline {
     margin-bottom: 20px;
   }
 }
 
 @media (max-height: 320px) and (orientation: landscape) {
-  .icon-offline {
+  .bks-icon-offline {
     margin-bottom: 0;
   }
-  .offline .runner-container {
+  .offline .bks-runner-container {
     top: 10px;
   }
 }
 
 @media (max-width: 240px) {
-  .interstitial-wrapper {
+  .bks-interstitial-wrapper {
     overflow: inherit;
     padding: 0 8px;
   }
